Create triangle surfaces

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vanilla js 3d cube",
+  "name": "vanilla-cube",
   "version": "2.0.0",
   "description": "Vanilla js 3d cube",
   "main": "index.js",
